# netops_studio

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  开发文档.md
src/netops_studio/: __init__.py  main.py
src/netops_studio/app/: __init__.py  application.py  async_worker.py  container.py  event_bus.py  i18n.py  tab_registry.py  theme.py
src/netops_studio/core/: __init__.py  ai_assist.py  av_iot.py  capture.py  codec.py  config_mgmt.py  diagnostics.py  discovery.py  flow.py  integration.py  ipam.py  monitor.py  outofband.py  rbac.py  report.py  security.py  speedtest.py  subnet.py  toolbox.py  troubleshoot.py
src/netops_studio/data/: .crypto_key  config.yaml  credentials.json  cve.json  kb.json
src/netops_studio/data/plugins/hello_alert/: metadata.json
src/netops_studio/gui/: __init__.py  ai_module.py  aviot_module.py  capture_module.py  codec_module.py  config_module.py  dashboard.py  diagnostic_module.py  discovery_module.py  flow_module.py  integration_module.py  ipam_module.py  monitor_module.py  oob_module.py  platform_module.py  report_module.py  security_module.py  speed_test_module.py  subnet_module.py  toolbox_module.py  troubleshoot_module.py  widgets.py
src/netops_studio/gui/shell/: __init__.py  main_window.py  nav_panel.py
tests/: test_ai.py  test_aviot.py  test_capture.py  test_codec.py  test_config.py  test_diagnostics.py  test_flow.py  test_integration.py  test_ipam.py  test_monitor.py  test_oob.py  test_rbac.py  test_report.py  test_security.py  test_subnet.py  test_toolbox.py  test_troubleshoot.py
(+1 files in other folders)
